--- a/PointOfSale2/nbproject/private/private.properties
+++ b/PointOfSale2/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sabuj\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+file.reference.mysql-connector-java-3.1.14-bin.jar=C:\\Users\\Akand\\Downloads\\Compressed\\mysql-connector-java-5.1.37\\mysql-connector-java-5.1.37\\mysql-connector-java-5.1.37-bin.jar
+user.properties.file=C:\\Users\\Akand\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
